--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.5.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.3.4",
-    "react-hot-toast": "^2.4.0",
-    "lucide-react": "^0.263.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
