--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Max Solutions Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
@@ -30,7 +31,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
-    "react-chartjs-2": "^5.3.0"
+    "nodemailer": "^7.0.5",
+    "react-chartjs-2": "^5.3.0",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
