--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.5",
+    "openai": "^5.15.0",
     "react-chartjs-2": "^5.3.0",
     "react-google-recaptcha": "^3.1.0"
   },
