--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "nodemailer": "^7.0.5",
     "openai": "^5.15.0",
     "react-chartjs-2": "^5.3.0",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
