--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "openai": "^5.15.0",
     "react-chartjs-2": "^5.3.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
