--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csv-parse": "^6.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
